--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,8 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "SMMT"]
+	path = SMMT
+	url = https://github.com/valvaletl/smmt
+	shallow = true
+	registered = true
